<?xml version="1.0"?>
<package format="2">
  <name>ambf_load_adf_plugin</name>
  <version>0.0.0</version>
  <description>AMBF world plugin that exposes a ros service to load in a ADF file at runtime</description>
  <maintainer email="henry.phalen@jhu.edu">Henry Phalen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
